# ansible-role-zerotier

./: README.md  pyproject.toml
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/default/tests/: test_zerotier.yml
tasks/: common.yml  debian.yml  main.yml  ubuntu.yml
vars/: main.yml
