[tool.poetry]
name = "ansible-role-zerotier"
version = "0.1.0"
description = ""
authors = ["Tyler Christiansen <code@tylerc.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.3"
molecule = {extras = ["lint", "podman"], version = "^4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
